# A_Star

./: CMakeLists.txt  README.md  astar  beolvasas.c  beolvasas.h  data.txt  dump.c  edges1.txt  graph.graphml  graphElements.c  graphElements.h  linkedlist.c  linkedlist.h  main copy.py  main.c  main.py  output.c  output.h  pathfinder.c  pathfinder.h  states.c  states.h
datas/: edges.txt  edges1.txt  nodes.txt  nodes1.txt
